Update KMeans Practical Longer.ipynb
Small typographical changes for consistency

--- a/section-1.09/KMeans Practical Longer.ipynb
+++ b/section-1.09/KMeans Practical Longer.ipynb
@@ -5,7 +5,7 @@
    "id": "7f5acef6",
    "metadata": {},
    "source": [
-    "Practical: k-means clustering\n",
+    "Practical: $k$-Means Clustering\n",
     "==\n"
    ]
   },
