Fixed some typos.

--- a/section-2.02/Practical8a.ipynb
+++ b/section-2.02/Practical8a.ipynb
@@ -16,7 +16,7 @@
     "<div class=\"alert alert-block alert-info\">\n",
     "<b>Note:</b> Scikit-Learn is not intended for use in large-scale Deep Learning projects...</div>\n",
     "\n",
-    "...It does, however, offer the required functionality to build simple DL models, such as the Multi-layer Perceptron (MLP), which we will use here. (An MLP has every node in one layer connected to every node in the next layer: it's **fully-connected** ).\n",
+    "...It does, however, offer the required functionality to build simple DL models, such as the Multi-layer Perceptron (MLP), which we will use here. (An MLP has every node in one layer connected to every node in the next layer: it's **fully-connected**.)\n",
     "Later we take this a step further with NumPy, in which more control over the architecture of the neural network is available, and training can become more complex."
    ]
   },
@@ -65,7 +65,7 @@
    "id": "76cdbc35-e432-452e-b38a-127867ff5815",
    "metadata": {},
    "source": [
-    "Split the data into training and test sets"
+    "Split the data into training and test sets."
    ]
   },
   {
@@ -118,7 +118,7 @@
    "id": "f0803187-5d00-4543-a1c4-10485499b7ef",
    "metadata": {},
    "source": [
-    "Import the sklearn Classifier based on the MLP algorithm"
+    "Import the sklearn Classifier based on the MLP algorithm."
    ]
   },
   {
@@ -145,7 +145,7 @@
    "metadata": {},
    "source": [
     "A lot of the setup of the neural network is taken care of for us, and some things are fixed:\n",
-    "- there if no activation function for the output layer\n",
+    "- there is no activation function for the output layer\n",
     "- cross-entropy is used as the loss function\n",
     "- we cannot use different activation functions or weight initialisers for different layers\n",
     "\n",
@@ -272,8 +272,8 @@
    "metadata": {},
    "source": [
     "__Have a play:__\n",
-    "- How does adjusting `alpha`, affect the score?\n",
-    "- How does changing `hidden_layer_sizes` affect the score, or the training time? Note: we can use hidden layers as the total number of layer minus 2 (the input and output layers). `hidden_layer_sizes=(5, 2)` means there will be two hidden layers, the first with 5 units and the second with 2 units. Try one to three layers with 1 to 10 units per layer. Look at the effects this has. Also look out for convergence warnings as the number of parameters increases."
+    "- How does adjusting `alpha` affect the score?\n",
+    "- How does changing `hidden_layer_sizes` affect the score, or the training time? Note: we can use hidden layers as the total number of layer minus 2 (the input and output layers). `hidden_layer_sizes=(5, 2)` means there will be two hidden layers, the first with 5 units and the second with 2 units. Try one to three layers with 1 to 10 units per layer. How does this change things? Also look out for convergence warnings as the number of parameters increases."
    ]
   },
   {
