--- a/section-1.05/Quick_Practical_Intro_to_Linear_Regression.ipynb
+++ b/section-1.05/Quick_Practical_Intro_to_Linear_Regression.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# A quick introduction to Linear Regression in Python\n",
@@ -28,7 +28,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The file `cats.csv` should already be in your folder."
@@ -144,6 +144,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The third and fourth columns in the cats table refer to body weight (Bwt) and heart weight (Hwt).\n",
+    "Note, the body weights are in kilograms, whereas the heart weights are in grammes.\n",
+    "We're going to build a model that predicts a cat's heart weight from its body weight.\n",
+    "\n",
     "First we'll look at how you can do linear regression using *scikit-learn*."
    ]
   },
@@ -912,7 +916,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So far, we've allowed LinearRegression.fit() to find our straight line that best fits the data. To convince yourself that what you're plotting is a straigh line with the calculated slope and intercept, try changing the values of a and b below, recalcuating ymanual and replotting the graph."
+    "So far, we've allowed LinearRegression.fit() to find our straight line that best fits the data. To convince yourself that what you're plotting is a straight line with the calculated slope and intercept, try changing the values of a and b below, recalcuating ymanual and replotting the graph."
    ]
   },
   {
