--- a/section-1.07/Classification_Practical.ipynb
+++ b/section-1.07/Classification_Practical.ipynb
@@ -14,7 +14,7 @@
    "source": [
     "This brief practical exercise introduces classification in Python.\n",
     "\n",
-    "We're going to create some data using synthetic data functions which we will use again in a different context in the clustering practical. I hope this isn't confusing: In this case, we are going to use some information from the synthetic data sets about which class (which \"set\") each data point belongs to. In other words, we're working here with \"labeled data\"."
+    "We're going to create some data using synthetic data functions which we will use again in a different context in the clustering practical. I hope this isn't confusing: in this case, we are going to use some information from the synthetic data sets about which class (which \"set\") each data point belongs to. In other words, we're working here with \"labeled data\"."
    ]
   },
   {
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's create a classifier with default values.(You can see these default values by printing classifier)."
+    "Let's create a classifier with default values. (You can see these default values by calling `classifier.get_params()`.)"
    ]
   },
   {
@@ -417,7 +417,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Try this**: How many points will X_train contain? Look at the parameters for train_test_split above and see if you can guess this before using X_train.shape to get the answer."
+    "**Try this**: How many points will X_train contain? Look at the parameters for `train_test_split()` above and see if you can guess this before using `X_train.shape` to get the answer."
    ]
   },
   {
@@ -433,7 +433,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Try this**: Confirm that the sizes of X_test, y_train and y_test are as you expect."
+    "**Try this**: Confirm that the sizes of `X_test`, `y_train` and `y_test` are as you expect."
    ]
   },
   {
@@ -530,7 +530,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the output above, you should be able to see what value of _k_ is chosen by default."
+    "From the output above, you should be able to see which value of _k_ is chosen by default."
    ]
   },
   {
@@ -653,7 +653,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Try this**: Take the iris dataset*. Use a similar 40% train_test_split to see if you can predict the iris type. What accuracy_score do you get in this case? (See hints below)."
+    "**Try this**: Take the iris dataset*. Use a similar 40% train_test_split to see if you can predict the iris type. What accuracy score do you get in this case? (See hints below)."
    ]
   },
   {
@@ -899,7 +899,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
