--- a/section-1.09/Clustering_Practical_Short.ipynb
+++ b/section-1.09/Clustering_Practical_Short.ipynb
@@ -175,10 +175,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "302c557f-bccb-4ac7-aa6a-5da8c2aa9545",
+   "id": "aeb760e2-b9a4-4a37-99fb-fafbfeee50b2",
    "metadata": {},
    "source": [
-    "Experiment with more artificial datasets create with `make_blobs`. `make_blobs` can take an argument centres (e.g. `skd.make_blobs(centers=3)`). It also takes an argument `cluster_std`."
+    "Experiment with more artificial datasets using `make_blobs`. `make_blobs` can take an argument centres (e.g. `skd.make_blobs(centers=3)`). It also takes an argument `cluster_std`."
    ]
   },
   {
