--- a/section-1.09/KMeans Practical Longer.ipynb
+++ b/section-1.09/KMeans Practical Longer.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a13e7d8f",
+   "id": "b09fc3f4-3173-451a-91f5-5ff707e62d64",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\"> <b>NOTE</b> \n",
@@ -22,17 +22,17 @@
     "    \n",
     "</div>\n",
     "\n",
-    "In this practical, we'll first look at a version of the $k$-means algorithm that we've written ourselves (part 1). You can look at this code to see how this works, and to see how it relates to the algorithm described in the videos. The idea here is to help you see how this algorithm could be implemented. In part 2, we'll show you how to use $k$-means from `scikit-learn`. In practice, this is how you will normally use $k$-means: you will use an established implementation that is know to be correct and to perform well. In parts 1 and 2 you will we working with an artifical dataset that has been constructed to help you explore the algorithm. In part 3, you will run the algorithm in a real (albeit small and controlled) dataset."
+    "In this practical, we'll first look at a version of the $k$-means algorithm that we've written ourselves (part 1). You can look at this code to see how this works, and to see how it relates to the algorithm described in the videos. The idea here is to help you see how this algorithm could be implemented. In part 2, we'll show you how to use $k$-means from `scikit-learn`. In practice, this is how you will normally use $k$-means: you will use an established implementation that is known to be correct and to perform well. In parts 1 and 2, you will we working with an artifical dataset that has been constructed to help you explore the algorithm. In part 3, you will run the algorithm in a real (albeit small and controlled) dataset."
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "507c61f0-bcff-4ad9-8ef7-f42b6c58dfd6",
+   "cell_type": "raw",
+   "id": "8210faeb-5de9-438a-8b33-e04be04b45dc",
    "metadata": {},
    "source": [
     "### Before you start\n",
     "\n",
-    "- Check that `mykmeans.py` file is the same folder as this Jupyter notebook."
+    "- Check that `MyKmeans.py` file is the same folder as this Jupyter notebook."
    ]
   },
   {
@@ -54,13 +54,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44510d35",
+   "id": "746dcb63-8bc3-4d10-87ce-6dd068c88b57",
    "metadata": {},
    "source": [
     "### Implementing $k$-means\n",
     "- In this first part of the practical we're going to implement $k$-means from scratch based on what we learnt in the lecture.\n",
-    "- The file MyKmeans.py contains code that implements $k$-means clustering\n",
-    "- Open the file and go through the function making sure you understand what every step does"
+    "- The file `MyKmeans.py` contains code that implements $k$-means clustering.\n",
+    "- Open the file and go through the function making sure you understand what every step does."
    ]
   },
   {
@@ -299,10 +299,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d69018d",
+   "id": "c8bc2ff4-c68c-4910-9591-50718ffde4ff",
    "metadata": {},
    "source": [
-    "We've seen in the lecture that $k$-means tries to minimize the total within cluster sum of squares. The file **calculateSS.py** contains a function that takes as intput the results of MyKmeans and calculates the total, total within clusters and between clusters sum of squares.\n",
+    "We've seen in the lecture that $k$-means tries to minimize the total within cluster sum of squares. The `calculateSS` function takes as intput the results of MyKmeans and calculates the total sum of squares within clusters and the total sum of squares between clusters.\n",
     "\n",
     "Go through the function and make sure you understand how it works and the differences between each quantity."
    ]
@@ -400,12 +400,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83fc567b",
+   "id": "e2246425-32c6-4650-94e4-bec07e672a11",
    "metadata": {},
    "source": [
     "In our example, we know that there are 2 clusters by construction. If we didn't, how would we choose $k$?\n",
     "\n",
-    "We'd need to run MyKmeans for various values of $k$ and choose the one after which the reduction in total within clusters variation doesn't change much.\n",
+    "We'd need to run `MyKmeans` for various values of $k$ and choose the one after which the change in the total sum of squares within clusters becomes very small.\n",
     "\n",
     "Let's write a function that iteratively changes $k$ and each time calculates the total within clusters sum of squares using our `calculateSS()` function:"
    ]
