--- a/section-2.02/Practical8a.ipynb
+++ b/section-2.02/Practical8a.ipynb
@@ -178,8 +178,7 @@
     }
    ],
    "source": [
-    "alpha = 1e-5\n",
-    "clf = MLPClassifier(solver='lbfgs', hidden_layer_sizes=(5,2), random_state=1)\n",
+    "clf = MLPClassifier(solver='lbfgs', hidden_layer_sizes=(5,2), random_state=1, alpha=1e-5)\n",
     "clf"
    ]
   },
@@ -415,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
