Adding some comments into the practical

--- a/section-1.09/Clustering_Practical_Short.ipynb
+++ b/section-1.09/Clustering_Practical_Short.ipynb
@@ -48,6 +48,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "767c0e62-aaa9-469d-9d0b-b2969266e566",
+   "metadata": {},
+   "source": [
+    "Firstly we will construct some random data that is grouped into clusters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9aa2565c-fd02-424e-9cc7-92efa86c6b01",
@@ -55,6 +63,14 @@
    "outputs": [],
    "source": [
     "X, y = skd.make_blobs()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fef10802-06b9-4e30-a7cb-e5e44ca4fe2a",
+   "metadata": {},
+   "source": [
+    "Now visualise the data we have created"
    ]
   },
   {
@@ -69,6 +85,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d56c3033-6236-4be1-a046-08ac446cb977",
+   "metadata": {},
+   "source": [
+    "Next we will use the scikit-learn clustering functionality to run a KMeans clustering approach on our data. We have defined that we want 3 clusters and n_init=10 means that we want to run 10 different clustering attempts with different initial cluster starting points (the random seeds used to initialise where the clusters start out). This is a way to explore the variability of the clustering to the initial conditions of the KMeans approach."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "81a24162-02ac-4ffb-b5d0-3147d2cd5d2e",
@@ -76,7 +100,8 @@
    "outputs": [],
    "source": [
     "model = skc.KMeans(n_clusters=3, n_init=10)\n",
-    "model.fit(X).score(X) # dropsa arning"
+    "# This now runs the model and then calculates how well it is predicting clusters. The default score approach is accuracy_score()\n",
+    "model.fit(X).score(X)"
    ]
   },
   {
@@ -104,6 +129,7 @@
    "id": "aeb760e2-b9a4-4a37-99fb-fafbfeee50b2",
    "metadata": {},
    "source": [
+    "<b>TASK</b> <br>\n",
     "Experiment with more artificial datasets using `make_blobs`. `make_blobs` can take an argument centres (e.g. `skd.make_blobs(centers=3)`). It also takes an argument `cluster_std`."
    ]
   },
